# mito-architect

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  report.rs
cmake/: CompilerWarnings.cmake
core/: CMakeLists.txt
core/benchmarks/: core_benchmark.cpp
core/data/: clinical_annotations.tsv  resource_manifest.tsv
core/include/mito/: analysis_engine.hpp  version.hpp
core/src/: analysis_engine.cpp
core/tests/: core_smoke_test.cpp
docs/: CLINICAL_ANNOTATION_SCHEMA_1.0.md  ERROR_CONTRACT.md  PLAN_1.0.md  PRODUCTION_ACCEPTANCE.md  PRODUCTION_READINESS_PLAN.md  RC1_TRACEABILITY.md  README.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.4.1.md  RELEASE_STATUS.md  ROADMAP.md  SCHEMA_0.5.md  SCHEMA_0.6_DRAFT.md  SCIENTIFIC_POSITIONING.md  SCIENTIFIC_SPECIFICATION.md  USER_GUIDE.md  VERIFICATION_0.4.1.md  VERIFICATION_0.5_RC1_DEV.md  VERIFICATION_0.7_RC3_DEV.md
ffi/: CMakeLists.txt  Cargo.toml  build.rs
ffi/include/: mito_c_api.h
ffi/src/: lib.rs  mito_c_api.cpp
fixtures/: README.md  tiny.fastq  truth_circular_indel.expected.json  truth_circular_indel.sam  truth_complex.expected.svs.json  truth_complex.sam  truth_evidence_graph.expected.json  truth_evidence_graph.sam  truth_mixed.expected.vcf  truth_mixed.sam  truth_molecule_edges.expected.evidence.json  truth_molecule_edges.sam  truth_phase_evidence.expected.json  truth_phase_evidence.sam  truth_phase_matrix.expected.json  truth_phase_matrix.sam  truth_protocol_identity.expected.json  truth_protocol_identity.sam  truth_qc_metrics.expected.evidence.json  truth_qc_metrics.sam  truth_repeat_rotation.expected.json  truth_repeat_rotation.sam  truth_repeat_rotation_permuted.sam  truth_snp.expected.vcf  truth_snp.sam  truth_snp_edges.expected.evidence.json  truth_snp_edges.sam  truth_split.expected.svs.json  truth_split.sam
fixtures/clinical/: conflicting_assertions.expected.json  conflicting_assertions.tsv  conflicting_structure.tsv  invalid_header.tsv  invalid_position.tsv  invalid_url.tsv  negative_manifest.json
fixtures/comparator/: mtdna-server-2-v2.1.16.empty.tsv  mtdna-server-2-v2.1.16.invalid-coverage.tsv  mtdna-server-2-v2.1.16.invalid-level.tsv  mtdna-server-2-v2.1.16.multi-sample.tsv  mtdna-server-2-v2.1.16.truth-phase.tsv
fixtures/haplogroup/: haplogrep3-3.3.2.expected.json  haplogrep3-3.3.2.hsd  invalid_alignment_rules.csv  truth_haplogroup_indels.sam  truth_haplogroup_rotated_indel.sam  truth_haplogroup_rule_188.fastq  truth_haplogroup_rule_309.fastq  truth_haplogroup_rule_56.fastq
fixtures/negative/: error_manifest.json  invalid_fastq_separator.fastq  invalid_primary_cigar.sam  invalid_sa_cigar.sam  invalid_sa_edit_distance.sam  invalid_sa_empty.sam  invalid_sa_field_count.sam  invalid_sa_mapq.sam  invalid_sa_position.sam  invalid_sa_strand.sam  invalid_sa_type.sam  invalid_sa_unterminated.sam
scripts/: bootstrap.sh  build_bam_fixture.sh  build_competitive_reference.sh  fetch_protein_structures.sh  fetch_public_fixture.sh  generate_rc1_evidence.sh  verify.sh  verify_benchmark_budget.sh  verify_clinical_snapshot.sh  verify_comparator_adapter.sh  verify_determinism.sh  verify_evidence_benchmark_budget.sh  verify_evidence_pages.sh  verify_haplogroup_rules.sh  verify_phase_matrix.sh  verify_rc1_evidence.sh  verify_rc3_exports.sh  verify_repeat_rotation.sh  verify_resources.sh  verify_sanitizers.sh
server/: Cargo.toml
server/src/: main.rs
visualization-lib/: package.json  tsconfig.json  vite.config.ts
visualization-lib/src/: MitoCircos.ts  index.ts  types.ts
web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/structures/: 8h9s.bcif  README.md  manifest.sha256
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AnalysisModulesPanel.tsx  CircosWrapper.tsx  ClusterMutationPanel.tsx  ExportButtons.tsx  NglProteinViewer.tsx  ProgressBar.tsx  Sidebar.tsx  UploadZone.tsx  VariantEvidenceTable.tsx  VariantTable.tsx
web/src/lib/: analysisNavigation.test.mjs  analysisNavigation.ts  api.ts  demoData.ts  proteinStructureSources.test.mjs  proteinStructureSources.ts  store.ts
web/src/routes/: Home.tsx  ResultPage.tsx  UploadPage.tsx
