[workspace]
members = ["ffi", "cli", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
cmake = "0.1"
indicatif = "0.17"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
