[package]
name = "mito-server"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
mime_guess.workspace = true
mito-ffi = { path = "../ffi" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
